fix gaps

--- a/frontend/src/assets/css/style.sass
+++ b/frontend/src/assets/css/style.sass
@@ -58,6 +58,6 @@ tr:hover div.not-selected.inventory-card-custom
     padding: 32px
 
 .inventory-container
-  padding-bottom: 44px
+  padding-bottom: 40px
   @media (min-width: 768px)
     padding-bottom: 0px
